--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,17 +2,12 @@
 <idea-plugin>
     <id>com.github.dexxiez.synthj84</id>
     <name>synthj_84</name>
-    <vendor>dexxiez</vendor>
+    <vendor>Dexxiez</vendor>
 
     <depends>com.intellij.modules.platform</depends>
-
-    <resource-bundle>messages.MyBundle</resource-bundle>
-
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.dexxiez.synthj84.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <themeProvider id="com.github.dexxiez.synthj84" path="/theme/synthj_84.theme.json"/>
     </extensions>
 
-    <applicationListeners>
-        <listener class="com.github.dexxiez.synthj84.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
-    </applicationListeners>
+
 </idea-plugin>
